# patchsense-crs

./: .gitignore  README.md  patchsense-pyproject.toml  pyproject.toml  sarif_parser.py  validator.py
oss-crs/: base.Dockerfile  builder.Dockerfile  crs.yaml  docker-bake.hcl  example-compose.yaml  litellm-config.yaml  validator.Dockerfile
patchsense/: __init__.py  cli.py  models.py  patterns.py  taxonomy.py  verdicts.py
patchsense/analyzer/: alignment.py  detect.py  fix_assignment.py  location.py  proof.py  root_cause.py  scan.py  source_patterns.py  suggest.py
patchsense/backends/: anthropic_backend.py  base.py  factory.py  mlx_backend.py  ollama_backend.py
patchsense/data/: family_invariants.json
patchsense/parser/: ast_diff.py  diff.py
registry/: patchsense-crs.yaml
tests/: test_sarif_parser.py
