[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "patchsense-crs"
version = "1.0.0"
description = "PatchSense OSS-CRS validator — semantic patch correctness filter"
requires-python = ">=3.11"
dependencies = [
    "patchsense>=2.4",
    "requests>=2.28.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
mlx = ["mlx-lm>=0.20.0"]

[project.scripts]
run_validator = "validator:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["patchsense*"]
