[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patchsense-crs"
version = "1.0.0"
description = "PatchSense OSS-CRS validator — semantic patch correctness filter"
requires-python = ">=3.11"
dependencies = [
    # patchsense itself is installed separately from patchsense-pyproject.toml
    # (vendored in patchsense/ subdirectory of this repo)
    "requests>=2.28.0",
    "watchdog>=6.0.0",
]

[project.scripts]
run_validator = "validator:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["patchsense*", "tests*"]
